@@ -1,5 +1,4 @@
 package exercise.controller;
-
 import exercise.model.City;
 import exercise.repository.CityRepository;
 import exercise.service.WeatherService;
@@ -10,8 +9,9 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 
-import java.util.List;
 import java.util.Map;
+import java.util.List;
+import java.util.stream.Collectors;
 
 
 @RestController
@@ -23,26 +23,36 @@ public class CityController {
     private final WeatherService weatherService;
 
     // BEGIN
-    @GetMapping(path = "/cities/{id}")
-    public Map<String, String> getCityWeather(@PathVariable Long id) {
-        return this.weatherService.getWeather(id);
-    }
-
     @GetMapping(path = "/search")
-    public List<Map<String, String>> getCityList(@RequestParam(value = "name", required = false) String name) {
-        List<City> resultCities;
+    public List<Map<String, String>> getCities(@RequestParam(required = false) String name) {
+
+        List<City> filteredCities;
+
         if (name == null) {
-            resultCities = cityRepository.findAllByOrderByName();
+            filteredCities = cityRepository.findAllByOrderByName();
         } else {
-            resultCities = cityRepository.findByNameIgnoreCaseStartingWith(name);
+            filteredCities = cityRepository.findByNameStartingWithIgnoreCase(name);
         }
 
-        return resultCities.stream()
+        List<Map<String, String>> citiesWithWeather = filteredCities.stream()
                 .map(city -> {
-                    Map<String, String> weather = weatherService.getWeather(city.getId());
-                    return Map.of("name", city.getName(), "temperature", weather.get("temperature"));
+                    Map<String, String> weather = weatherService.lookUp(city.getId());
+                    return Map.of(
+                            "name", city.getName(),
+                            "temperature", weather.get("temperature")
+                    );
                 })
-                .toList();
+                .collect(Collectors.toList());
+
+        return citiesWithWeather;
+    }
+
+    @GetMapping(path = "cities/{id}")
+    public Map<String, String> getCity(@PathVariable long id) {
+
+        Map<String, String> weather = weatherService.lookUp(id);
+
+        return weather;
     }
     // END
 }
